kubernetes/configmaps/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy.yaml: |
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }

    static_resources:
      listeners:
        - name: listener_0
          address:
            socket_address: { address: 0.0.0.0, port_value: 8080 }
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress_http
                    codec_type: auto
                    stream_idle_timeout: 0s
                    access_log:
                      - name: envoy.access_loggers.stdout
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: backend
                          domains: ["*"]
                          routes:
                            - match: { prefix: "/proto.CardService/" }
                              route:
                                cluster: card-service
                                timeout: 0s
                                upgrade_configs:
                                  - upgrade_type: "websocket"
                                    enabled: false
                            - match: { prefix: "/proto.TransactionService/" }
                              route:
                                cluster: transaction-service
                                timeout: 0s
                                upgrade_configs:
                                  - upgrade_type: "websocket"
                                    enabled: false
                            - match: { prefix: "/proto.NotificationService/" }
                              route:
                                cluster: notification-service
                                timeout: 0s
                                upgrade_configs:
                                  - upgrade_type: "websocket"
                                    enabled: false
                            - match: { prefix: "/proto.LedgerService/" }
                              route:
                                cluster: ledger-service
                                timeout: 0s
                                upgrade_configs:
                                  - upgrade_type: "websocket"
                                    enabled: false
                          typed_per_filter_config:
                            envoy.filters.http.cors:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                              allow_origin_string_match:
                                - prefix: "*"
                              allow_methods: GET, PUT, DELETE, POST, OPTIONS
                              allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,grpc-accept-encoding
                              max_age: "1728000"
                              expose_headers: grpc-status,grpc-message,grpc-encoding,grpc-accept-encoding
                    http_filters:
                      - name: envoy.filters.http.grpc_web
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                      - name: envoy.filters.http.cors
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    internal_address_config:
                      unix_sockets: true
                      cidr_ranges:
                        - address_prefix: "10.0.0.0"
                          prefix_len: 8
                        - address_prefix: "172.16.0.0"
                          prefix_len: 12
                        - address_prefix: "192.168.0.0"
                          prefix_len: 16

      clusters:
        - name: card-service
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
          load_assignment:
            cluster_name: card-service
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: card-service
                          port_value: 8080
        
        - name: transaction-service
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
          load_assignment:
            cluster_name: transaction-service
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: transaction-service
                          port_value: 8080

        - name: notification-service
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
          load_assignment:
            cluster_name: notification-service
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: notification-service
                          port_value: 8080

        - name: ledger-service
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
          load_assignment:
            cluster_name: ledger-service
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: ledger-service
                          port_value: 8080
